--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
   test:
+        
         runs-on: windows-latest
+        name: Unit Test
         steps:
             - uses: actions/checkout@v2
             - name: Set up JDK 1.11
@@ -30,3 +32,15 @@ jobs:
                     java-version: 1.11
             - name: Test with Maven
               run: mvn -B test --file pom.xml
+  deploy:
+    runs-on: windows-latest
+    name: Deploy
+    needs: [build,test]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Deploy to Heroku
+      uses: AkhileshNS/heroku-deploy@v3.12.12
+      with:
+       heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+       heroku_email: ${{secrets.HEROKU_EMAIL}}
+       heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
