--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,22 +20,12 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-  test:
-        
-        runs-on: windows-latest
-        name: Unit Test
-        steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK 1.11
-              uses: actions/setup-java@v2
-              with:
-                    java-version: 1.11
-            - name: Test with Maven
-              run: mvn -B test --file pom.xml
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml
   deploy:
     runs-on: windows-latest
     name: Deploy
-    needs: [build,test]
+    needs: [build]
     steps:
     - uses: actions/checkout@v2
     - name: Deploy to Heroku
