--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -20,12 +20,24 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+  tests:
+    name: Test Cases
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
     - name: Test with Maven
       run: mvn -B test --file pom.xml
   deploy:
-    runs-on: windows-latest
     name: Deploy
-    needs: [build]
+    needs: [build,tests]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Deploy to Heroku
