--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,18 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+         <groupId>org.webjars</groupId>
+         <artifactId>bootstrap</artifactId>
+         <version>3.3.6</version>
+         <scope>test</scope>
+       </dependency>
+       <dependency>
+         <groupId>org.webjars</groupId>
+         <artifactId>jquery</artifactId>
+         <version>3.0.0</version>
+        <scope>test</scope>
+      </dependency>
 
     </dependencies>
     <build>
