--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
          <version>3.3.6</version>
          <scope>test</scope>
        </dependency>
+       <!-- https://mvnrepository.com/artifact/junit/junit -->
+       <dependency>
+         <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.10</version>
+       <scope>test</scope>
+      </dependency>
+       
        <dependency>
          <groupId>org.webjars</groupId>
          <artifactId>jquery</artifactId>
