--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,23 +20,26 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-  tests:
-    name: Test Cases
-    needs: [build]
+  run_tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Test with Maven
-      run: mvn -B test --file pom.xml
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 14
+        uses: actions/setup-java@v1
+        with:
+          java-version: 14
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
   deploy:
     name: Deploy
-    needs: [build,tests]
+    needs: [build,run_tests]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
