--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
+      - name: Run other test cases
+        run: mvn test -Dtest=WelcomeControllerTest
       - name: Upload Unit Test Results
         if: always()
         uses: actions/upload-artifact@v2
